--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <br/>
       <input type="button" class="btn" id="add" value="+" onClick="calculate(this.id)"/>
       <input type="button" class="btn" id="subtract" value="-" onClick="calculate(this.id)"/>
+      <input type="button" class="btn" id="multiply" value="*" onClick="calculate(this.id)"/>
     </div>
-    
+    <br/>
     <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
     <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
     <script type="text/javascript" src="src/calculator.js"></script>
