--- a/index.html
+++ b/index.html
@@ -5,29 +5,23 @@
     <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="bootstrap/css/custom.css" rel="stylesheet">
 
   </head>
 
   <body>
     <br/>
-
-    <div class="col-lg-8">
-      <input type="text" placeholder="First operand" id="num1"/>
-      <span id="operator">+</span>
-      <input type="text" placeholder="Second operand" id="num2"/>
-      <input type="text" placeholder="Answer" id="answer" disabled/>
-      <br/>
-      <input type="button" class="btn" id="add" value="+" onClick="calculate(this.id)"/>
-      <input type="button" class="btn" id="subtract" value="-" onClick="calculate(this.id)"/>
-      <input type="button" class="btn" id="multiply" value="*" onClick="calculate(this.id)"/>
-      <input type="button" class="btn" id="divide" value="/" onClick="calculate(this.id)"/>
-    </div>
     <br/>
-    <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
-    <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+    <div class="container">
+      <div class="col-lg-4 col-lg-offset-4 calcUnit">
+	<h1 class="text-center">CALCULATOR</h1><br/>
+	  <input type="text" class="form-control" placeholder="First operand" id="num1"/><br/>
+	  <input type="text" class="form-control" maxlength="1"  placeholder="Operator" id="operator"/><br/>
+	  <input type="text" class="form-control"  placeholder="Second operand" id="num2"/><br/>
+	  <input type="button" class="btn btn-primary btn-large form-control" id="compute" value="=" onClick="calculate()"/><br/><br/>
+	  <input type="text" class="form-control"  placeholder="Answer" id="answer" disabled/>
+      </div>
+    </div>
     <script type="text/javascript" src="src/calculator.js"></script>
-    <script type="text/javascript" src="spec/calculatorSpec.js"></script>
-    <script type="text/javascript" src="spec/SpecHelper.js"></script>
-    
   </body>
 </html>
