refactored for object-orientation

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 	  <input type="text" class="form-control" placeholder="First operand" id="num1"/><br/>
 	  <input type="text" class="form-control" maxlength="1"  placeholder="Operator" id="operator"/><br/>
 	  <input type="text" class="form-control"  placeholder="Second operand" id="num2"/><br/>
-	  <input type="button" class="btn btn-primary btn-large form-control" id="compute" value="=" onClick="calculate()"/><br/><br/>
+	  <input type="button" class="btn btn-primary btn-large form-control" id="compute" value="=" onClick="performCalculation()"/><br/><br/>
 	  <input type="text" class="form-control"  placeholder="Answer" id="answer" disabled/>
       </div>
     </div>
-    <script type="text/javascript" src="src/calculator.js"></script>
+    <script type="text/javascript" src="src/FrontendBackendLinker.js"></script>
+    <script type="text/javascript" src="src/InputValidator.js"></script>
+    <script type="text/javascript" src="src/Calculator.js"></script>
   </body>
 </html>
