--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -8,9 +8,15 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+  <script type="text/javascript" src="src/jquery-2.0.3.js"></script>
 
-  <script type="text/javascript" src="src/calculator.js"></script>
-  <script type="text/javascript" src="spec/calculatorSpec.js"></script>
+  <script type="text/javascript" src="src/Calculator.js"></script>
+  <script type="text/javascript" src="src/InputValidator.js"></script>
+  <script type="text/javascript" src="src/FrontendBackendLinker.js"></script>
+
+  <script type="text/javascript" src="spec/CalculatorSpec.js"></script>
+  <script type="text/javascript" src="spec/InputValidatorSpec.js"></script>
+  <script type="text/javascript" src="spec/FrontendBackendLinkerSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
@@ -44,6 +50,7 @@
 </head>
 
 <body>
-  <input type="text" class="form-control"  placeholder="Answer" id="answer" disabled hidden/>
+  <div id="calcContainer">
+  </div>
 </body>
 </html>
